# inconspiquous

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  flake.nix  pyproject.toml  test.py
.github/workflows/: ci-core.yml  ci-nix.yml  ci-pyright.yml  ci.core.yml  code-formatting.yml
benchmarks/: bench_mbqc.sh  bench_qec.sh  bench_rand_comp.sh
inconspiquous/: alloc.py  constraints.py  gates.py  inconspiquous-opt  measurement.py
inconspiquous/analysis/: staged.py
inconspiquous/backend/: qir.py
inconspiquous/dialect/: __init__.py
inconspiquous/dialects/: __init__.py  angle.py  gate.py  instrument.py  measurement.py  oq3.py  prob.py  pulse.py  qec.py  qft.py  qir.py  qref.py  qssa.py  qu.py  quantum.py  qubit.py  quir.py  staged.py
inconspiquous/dialects/tblgen/: OQ3Dialect.h  OQ3Ops.td
inconspiquous/gates/: constraints.py  core.py
inconspiquous/tools/: gui.py  inconspiquous_opt_main.py  print_qir.py  quopt_main.py
inconspiquous/transforms/: __init__.py  compute_frame_times.py  convert_qir_to_llvm.py  convert_qref_to_qir.py  convert_qref_to_qssa.py  convert_qssa_to_qref.py  convert_to_cme.py  convert_to_cz_j.py  convert_to_mbqc.py  flip_coins.py  fold_arith_const_duration.py  inline_circuits.py  lower_dyn_gate_to_scf.py  lower_to_fin_supp.py  mbqc_legalize.py  pauli_fusion.py  randomized_comp.py
inconspiquous/transforms/canonicalization/: angle.py  gate.py  measurement.py  prob.py  qref.py  qssa.py  staged.py
inconspiquous/transforms/qec/: inline.py
inconspiquous/transforms/qft/: inline.py
inconspiquous/transforms/quaternions/: lower.py  merge.py
inconspiquous/transforms/xs/: convert_to_xs.py  lower.py  merge.py  select.py
inconspiquous/transforms/xzs/: .#pipeline.py  commute.py  convert_to_xzs.py  fusion.py  lower.py  merge.py  pipeline.py  select.py
inconspiquous/utils/: linear_walker.py  qssa_builder.py
tests/: qir.py  test_instruments.py  test_qir.py  test_qref.py  test_qssa.py
tests/backend/: test_qir.py
tests/builder/: test_qssa_builder.py
tests/filecheck/: .lit_test_times.txt  lit.cfg
tests/filecheck/bench/: adaptive_qec.mlir  ipe.mlir  lit.local.cfg  logical_plus.mlir  mbqc_cx.mlir  mbqc_rotation.mlir  qaoa.mlir  qml.mlir  repeat_until_success.mlir  rwpe.mlir  teleport.mlir
tests/filecheck/dialects/: angle.mlir  gate.mlir  oq3_extra_ops.mlir  oq3_ops.mlir  qu.mlir  quantum.mlir  qubit.mlir  quir_ops.mlir
tests/filecheck/dialects/angle/: canonicalize.mlir  ops.mlir
tests/filecheck/dialects/gate/: canonicalize.mlir  control_types.mlir  ops.mlir
tests/filecheck/dialects/instrument/: ops.mlir
tests/filecheck/dialects/measurement/: canonicalize.mlir  ops.mlir
tests/filecheck/dialects/prob/: canonicalize.mlir  ops.mlir  verify.mlir
tests/filecheck/dialects/qec/: error.mlir  ops.mlir
tests/filecheck/dialects/qft/: ops.mlir
tests/filecheck/dialects/qir/: attrs.mlir  ops.mlir
tests/filecheck/dialects/qref/: canonicalize.mlir  ops.mlir
tests/filecheck/dialects/qssa/: canonicalize.mlir  gate_counts.mlir  ops.mlir
tests/filecheck/examples/: depolarising.mlir  double_phase.mlir  mbqc.mlir  perfect_code.mlir  phase_gate.mlir  rand_comp_ex.mlir  rotation.mlir  small.mlir  staged.mlir  toffoli.mlir
tests/filecheck/transforms/: compute_frame_times.mlir  compute_frame_times_barrier.mlir  convert-qref-to-qir.mlir  convert_qir_to_llvm.mlir  convert_qref_to_qir.mlir  convert_qref_to_qssa.mlir  convert_qssa_to_qref.mlir  convert_to_cme.mlir  convert_to_cz_j.mlir  convert_to_mbqc.mlir  flip_coins.mlir  fold_arith_const_durations.mlir  inline_circuits.mlir  lower_dyn_gate_to_scf.mlir  lower_to_fin_supp.mlir  pauli_fusion.mlir  randomized_compilation.mlir
tests/filecheck/transforms/mbqc_legalize/: invalid.mlir  (+1 more)
tests/quopt/: test_quopt.py
tests/transforms/: test_convert_qref_to_qir.py  test_flip_coins.py  test_inline_circuits.py
(+13 files in other folders)
