[project]
name = "inconspiquous"
version = "0.1.0"
description = "A testing ground for quantum computing compilation ideas in xdsl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xdsl[gui]>=0.23.0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.9.0",
  "pyright>=1.1.380",
  "pytest>=8.3.3",
  "lit<19.0.0",
  "filecheck==1.0.1",
  "pre-commit==4.0.1",
  "psutil>=6.0.0",
]

[tool.uv.sources]
xdsl = { git = "https://github.com/xdslproject/xdsl" }

[project.scripts]
quopt = "inconspiquous.tools.quopt_main:main"
quopt-gui = "inconspiquous.tools.gui:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
typeCheckingMode = "strict"
include = ["inconspiquous"]
