[project]
name = "inconspiquous"
version = "0.1.0"
description = "A testing ground for quantum computing compilation ideas in xdsl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xdsl[gui]>=0.23.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
  "pyright>=1.1.380",
  "pytest>=8.3.3",
  "lit<19.0.0",
  "filecheck>=1.0.1",
  "pre-commit==4.5.0",
  "psutil>=6.0.0",
  "pre-commit>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = ["xdsl[dev]", "inconspiquous[dev]"]

[tool.uv.sources]
xdsl = { git = "https://github.com/xdslproject/xdsl" }

[project.scripts]
quopt = "inconspiquous.tools.quopt_main:main"
quopt-gui = "inconspiquous.tools.gui:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
enableExperimentalFeatures = true
typeCheckingMode = "strict"
include = ["inconspiquous"]
