[project]
name = "inconspiquous"
version = "0.1.0"
description = "A testing ground for quantum computing compilation ideas in xdsl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xdsl[gui]>=0.23.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
  "pyright>=1.1.380",
  "pytest>=8.3.3",
  "lit<19.0.0",
  "filecheck>=1.0.1",
  "pre-commit==4.5.1",
  "psutil>=6.0.0",
  "pre-commit>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = ["xdsl[dev]", "inconspiquous[dev]"]

[tool.uv.sources]
xdsl = { git = "https://github.com/xdslproject/xdsl" }

[project.scripts]
quopt = "inconspiquous.tools.quopt_main:main"
quopt-gui = "inconspiquous.tools.gui:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
enableExperimentalFeatures = true
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
enableTypeIgnoreComments = false
reportAssertAlwaysTrue = true
reportImportCycles = false
typeCheckingMode = "strict"
include = ["inconspiquous", "tests"]

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb", "*.pyi"]
exclude = [".venv", "docs/marimo"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PT", "TID251", "INP", "PYI"]
ignore = [
    "E741",   # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "PT006",  # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
    "PT012",  # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
    "PYI041", # https://docs.astral.sh/ruff/rules/redundant-numeric-union
]

[tool.ruff.lint.pycodestyle]
# TODO: remove this setting and go to default line length of 88
# Removing this line length results in a large number of errors for doc strings, ideally
# these should be ignored separately.
max-line-length = 130

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.TypeVar".msg = "Use typing_extensions.TypeVar instead."

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "INP"]

[tool.ruff.lint.mccabe]
max-complexity = 10
